--- a/test_task_shop/cart/templates/cart/cart_view.html
+++ b/test_task_shop/cart/templates/cart/cart_view.html
@@ -122,7 +122,7 @@
             <button
                     type="button"
                     class="btn btn-success btn-md text-bg-light mt-4">
-                <a class="nav-link text-decoration-none">Checkout</a>
+                <a class="nav-link text-decoration-none" href="{% url 'payment:checkout' %}">Checkout</a>
             </button>
         </div>
     </div>
