--- a/test_task_shop/test_task_shop/templates/includes/nav_bar.html
+++ b/test_task_shop/test_task_shop/templates/includes/nav_bar.html
@@ -10,7 +10,7 @@
                 ><strong><a href="https://github.com/lap0chka/">Git Hub</a></strong></span>
                 <span class="me-3"
                 ><i class="fa-solid fa-phone me-1 text-warning"></i>
-              <strong>+111 111 111</strong></span
+              <strong>1-800-123-1234</strong></span
                 >
             </div>
             <div
@@ -44,11 +44,87 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href = '{% url 'cart:cart_view' %}'>
-                        <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Cart
-                        <span id="lblCartCount" class="badge badge-warning ">
+            <form action="{% url 'shop:search_products' %}">
+                <div class="ms-auto d-none d-lg-block">
+                    <div class="input-group">
+              <span
+                      class="border-success input-group-text bg-success text-white"
+              ><i class="fa-solid fa-magnifying-glass"></i
+              ></span>
+                        <input
+                                type="text"
+                                class="form-control border-success"
+                                style="color: #7a7a7a"
+                                name="q"
+
+                        />
+                        <button type="submit" class="btn btn-success text-white">Search</button>
+
+                    </div>
+
+                </div>
+             </form>
+        <ul class="navbar-nav ms-auto">
+            {% for i in categories %}
+
+            {% if not i.children.all %}
+            <li class="nav-item">
+                <a class="nav-link" href="{{i.get_absolute_url}}">{{i.name|upper }}</a>
+            </li>
+            {% else %}
+            <li class="nav-item dropdown">
+                <a
+                        class="nav-link dropdown-toggle"
+                        href="{{i.get_absolute_url}}"
+                        id="navbarDropdownMenuLink"
+                        data-toggle="dropdown"
+                        aria-haspopup="true"
+                        aria-expanded="false"
+                >
+                    {{i.name|upper}}
+                </a>
+                <ul
+                        class="dropdown-menu"
+                        aria-labelledby="navbarDropdownMenuLink"
+                >
+                    {% for obj in i.children.all %} {% if not obj.children.all %}
+                    <li><a class="dropdown-item" href="{{obj.get_absolute_url}}">{{obj.name|upper}}</a></li>
+                    {% else %}
+                    <li class="dropdown-submenu">
+                        <a class="dropdown-item dropdown-toggle"
+                           href="{{obj.get_absolute_url}}">{{obj.name|upper}}</a>
+
+                        <ul class="dropdown-menu">
+                            {% for subobj in obj.children.all %} {% if not subobj.children.all %}
+                            <li>
+                                <a class="dropdown-item"
+                                   href="{{subobj.get_absolute_url}}">{{subobj.name|upper}}</a>
+                            </li>
+                            {% else %}
+                            <li class="dropdown-submenu">
+                                <a class="dropdown-item dropdown-toggle" href="{{subobj.get_absolute_url}}">{{subobj.name|upper}}</a>
+
+                                <ul class="dropdown-menu">
+                                    {% for lastobj in subobj.children.all %}
+                                    <li>
+                                        <a class="dropdown-item" href="{{lastobj.get_absolute_url}}">{{lastobj.name|upper}}</a>
+                                    </li>
+                                    {% endfor %}
+                                </ul>
+                            </li>
+                            {% endif %} {% endfor %}
+                        </ul>
+                    </li>
+                    {% endif %} {% endfor %}
+                </ul>
+            </li>
+            {% endif %} {% endfor %}
+        </ul>
+        <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+                <a class="nav-link mx-2 text-uppercase" href="{% url 'cart:cart_view' %}">
+                    <i class="fa fa-shopping-cart" aria-hidden="true"> </i> Cart
+                    <span id="lblCartCount" class="badge badge-warning ">
                      {% with cart_qty=cart|length%}
                     {% if cart_qty > 0 %}
                     {{cart_qty}}
@@ -57,35 +133,35 @@
                     {% endif %}
                   {% endwith %}
                  </span>
-                    </a>
-                </li>
-                {% if request.user.is_authenticated %}
+                </a>
+            </li>
+            {% if request.user.is_authenticated %}
 
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href="{% url 'account:dashboard' %}"
-                    ><i class="fa-solid fa-circle-user me-1"></i>@{{ user.username }} Account</a
-                    >
-                </li>
+            <li class="nav-item">
+                <a class="nav-link mx-2 text-uppercase" href="{% url 'account:dashboard' %}"
+                ><i class="fa-solid fa-circle-user me-1"></i>@{{ user.username }} Account</a
+                >
+            </li>
 
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href="{% url 'account:logout' %}"
-                    ><i class="fa-solid fa-circle-user me-1"></i> Logout</a
-                    >
-                </li>
-                {% else %}
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href="{% url 'account:register' %}"
-                    ><i class="fa-solid fa-circle-user me-1"></i> Register</a
-                    >
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link mx-2 text-uppercase" href="{% url 'account:login' %}"
-                    ><i class="fa-solid fa-circle-user me-1"></i> Login</a
-                    >
-                </li>
-                {% endif %}
+            <li class="nav-item">
+                <a class="nav-link mx-2 text-uppercase" href="{% url 'account:logout' %}"
+                ><i class="fa-solid fa-circle-user me-1"></i> Logout</a
+                >
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link mx-2 text-uppercase" href="{% url 'account:register' %}"
+                ><i class="fa-solid fa-circle-user me-1"></i> Register</a
+                >
+            </li>
+            <li class="nav-item">
+                <a class="nav-link mx-2 text-uppercase" href="{% url 'account:login' %}"
+                ><i class="fa-solid fa-circle-user me-1"></i> Login</a
+                >
+            </li>
+            {% endif %}
 
-            </ul>
-        </div>
+        </ul>
+    </div>
     </div>
 </nav>
