--- a/test_task_shop/payment/templates/payment/checkout.html
+++ b/test_task_shop/payment/templates/payment/checkout.html
@@ -31,7 +31,9 @@
         <br>
 
 
-        <button id="complete-order" type="submit" name="stripe-payment" value="stripe-payment" class="btn btn-primary navbar-btn text-white"> &nbsp; Complete order
+        <button id="complete-order" type="submit" name="type_payment" value="stripe-payment" class="btn btn-primary navbar-btn text-white"> &nbsp; Pay with card
+        </button>
+        <button id="complete-order-crypto" type="submit" name="type_payment" value="crypto-payment" class="btn btn-primary navbar-btn text-white"> &nbsp; Pay with crypto
         </button>
 
 
