--- a/test_task_shop/shop/templates/shop/components/product_list.html
+++ b/test_task_shop/shop/templates/shop/components/product_list.html
@@ -1,26 +1,24 @@
+{% load thumbnail%}
+
 {% for product in products %}
 
-{% if forloop.last %}
-<div class="col" hx-get="{% url 'shop:products' %}?page={{ page_obj.number|add:1 }}" hx-trigger="revealed"
-    hx-swap="afterend">
-    {% else %}
-    <div class="col">
-        {% endif %}
-        <a class="text-black text-decoration-none fs-4" href="{{product.get_absolute_url}}">
-            <div class="card shadow-sm h-100">
 
-                <img class="img-fluid h-100" alt="Responsive image" src="{{ product.image.url }}" />
+<a class="text-black text-decoration-none fs-4" href="{{product.get_absolute_url}}">
+    <div class="card shadow-sm h-100">
 
-                <div class="card-body">
-                    <p class="card-text">
-                        {{product.title|capfirst}}
-                    </p>
-                    <div class="d-flex justify-content-between align-items-center badge search-button text-wrap text-dark"
-                        style="width: 6rem">
-                        <h6>$ {{product.price}}</h6>
-                    </div>
-                </div>
+        {% thumbnail product.image "400x400" as im %}
+            <img class="img-fluid h-100" alt="Responsive image" src="{{ im.url }}"/>
+        {% endthumbnail %}
+
+        <div class="card-body">
+            <p class="card-text">
+                {{product.title|capfirst}}
+            </p>
+            <div class="d-flex justify-content-between align-items-center badge search-button text-wrap text-dark"
+                 style="width: 6rem">
+                <h6>$ {{product.price}}</h6>
             </div>
-        </a>
+        </div>
     </div>
+</a>
 {% endfor %}
