--- a/test_task_shop/shop/templates/shop/products.html
+++ b/test_task_shop/shop/templates/shop/products.html
@@ -3,37 +3,78 @@
 {% block content %}
 
 
-    <!-- Introduction section -->
 {% if not request.user.is_authenticated %}
 <section class="py-4 text-center container">
-    <div class="row">
-      <div class="col-lg-6 col-md-8 mx-auto">
-        <h4>Choose and it is in your hands.</h4>
+    <div class="row py-lg-5">
+        <div class="col-lg-6 col-md-8 mx-auto">
+            <h4>Choose and it is in your hands.</h4>
 
-        <br />
+            <br/>
 
-        <p class="lead text-muted">Browse and make the best deal</p>
+            <p class="lead text-muted">Browse and make the best deal</p>
 
-        <br />
+            <br/>
 
-        <a href="{% url 'account:register' %}" class="btn btn-success my-2"> Create an account </a>
-      </div>
+            <a href="{% url 'account:register' %}" class="btn btn-success my-2"> Create an account </a>
+        </div>
     </div>
-  </section>
+</section>
 {%endif%}
-  <!-- All products section -->
+<!-- All products section -->
 
-  <section class="album py-5 bg-light">
+<section class="album py-5 bg-light">
     <div class="container">
-      <div class="pb-3 h5">All products</div>
+        <div class="pb-3 h5">All products</div>
 
-      <hr />
+        <hr/>
 
-      <br />
+        <br/>
 
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
-           {% include 'shop/components/product_list.html' %}
-      </div>
+        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-5 g-3">
+            {% include 'shop/components/product_list.html' %}
+        </div>
+        <br>
+        <div class="col-12">
+            <nav>
+                <ul class="pagination justify-content-center">
+                    <!-- Previous page link -->
+                    {% if page_obj.has_previous %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.previous_page_number }}">Previous</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">Previous</a>
+                    </li>
+                    {% endif %}
+
+                    <!-- Page numbers -->
+                    {% for page_num in page_obj.paginator.page_range %}
+                    {% if page_num == page_obj.number %}
+                    <li class="page-item active">
+                        <a class="page-link" href="#">{{ page_num }}</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+                    </li>
+                    {% endif %}
+                    {% endfor %}
+
+                    <!-- Next page link -->
+                    {% if page_obj.has_next %}
+                    <li class="page-item">
+                        <a class="page-link" href="?page={{ page_obj.next_page_number }}">Next</a>
+                    </li>
+                    {% else %}
+                    <li class="page-item disabled">
+                        <a class="page-link" href="#" tabindex="-1">Next</a>
+                    </li>
+                    {% endif %}
+                </ul>
+            </nav>
+
+        </div>
     </div>
-  </section>
+</section>
 {% endblock %}
