--- a/test_task_shop/test_task_shop/templates/includes/nav_bar.html
+++ b/test_task_shop/test_task_shop/templates/includes/nav_bar.html
@@ -44,7 +44,7 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <form action="{% url 'shop:search_products' %}">
+            <form>
                 <div class="ms-auto d-none d-lg-block">
                     <div class="input-group">
               <span
