--- a/test_task_shop/payment/templates/payment/checkout.html
+++ b/test_task_shop/payment/templates/payment/checkout.html
@@ -35,6 +35,8 @@
         </button>
         <button id="complete-order-crypto" type="submit" name="type_payment" value="crypto-payment" class="btn btn-primary navbar-btn text-white"> &nbsp; Pay with crypto
         </button>
+        <button id="complete-order-task" type="submit" name="type_payment" value="api_task" class="btn btn-primary navbar-btn text-white"> &nbsp; TASK
+        </button>
 
 
         <br>
@@ -47,8 +49,6 @@
 
 
 <br>
-<button id="buyCrypto">Купить Bitcoin</button>
-
   <script src="https://buy.ramp.network"></script>
   <script>
     document.getElementById("buyCrypto").addEventListener("click", () => {
