--- a/test_task_shop/test_task_shop/templates/includes/nav_bar.html
+++ b/test_task_shop/test_task_shop/templates/includes/nav_bar.html
@@ -119,6 +119,7 @@
                 </ul>
             </li>
             {% endif %} {% endfor %}
+            <li><a href="{% url 'payment:exchange' %}">kkk</a></li>
         </ul>
         <ul class="navbar-nav ms-auto">
             <li class="nav-item">
