--- a/test_task_shop/shop/templates/shop/products.html
+++ b/test_task_shop/shop/templates/shop/products.html
@@ -25,6 +25,8 @@
 <section class="album py-5 bg-light">
     <div class="container">
         <div class="pb-3 h5">All products</div>
+        <a href="?sort=asc">By low price</a> |
+        <a href="?sort=desc">By high price</a>
 
         <hr/>
 
